samples/helloworld-acmg/helloworld-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: helloworld-acmg
  namespace: istio-system
spec:
  host: helloworld.default.svc.cluster.local
  trafficPolicy:
    loadBalancer:
      simple: ROUND_ROBIN
  subsets:
    - name: v1
      labels:
        version: v1
    - name: v2
      labels:
        version: v2
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: helloworld-acmg
  namespace: istio-system
spec:
  enableAcmg: true
  hosts:
  - "*"
  gateways:
  - acmg-gateway
  http:
  - match:
    - uri:
        exact: /hello
    route:
    - destination:
        host: helloworld.default.svc.cluster.local
        subset: v1
      weight: 90
    - destination:
        host: helloworld.default.svc.cluster.local
        subset: v2
      weight: 10
